crates/widgets/tests/unit/snapshots/main__unit__screen_overlays__the_music_folder_prompt_lists_the_subfolders_and_marks_those_with_audio.snap
---
source: crates/widgets/tests/unit/screen_overlays.rs
expression: frame_with_overlay(with_a_list())
---
"                                                                                "
" ╭ Zefiro ────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │  No track                                                      ■ Stopped   │ "
" │                                                                            │ "
" │  00:00 / 00:00  » 1×                                                       │ "
" │                ╭ LIBRARY FOLDER ──────────────────────────╮                │ "
" │  ──────────────│ > /Users/me/                             │─────────────   │ "
" │  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│ a readable folder                        │                │ "
" │  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│   ♪ album 0                              │                │ "
" │  ⣀⣀⢀⣀⣀⢀⣀⡀⣀⣀⡀⣀⣀⡀│ >   folder 1                             │█████████████   │ "
" │                │     folder 2                             │                │ "
" ╰────────────────│   ♪ album 3                              │────────────────╯ "
" ┏ Library ── 1/3 │     folder 4                             │e noir ━━━━━━━━━┓ "
" ┃    Test Artist │     folder 5                             │                ┃ "
" ┃    Test Artist │   ♪ album 6                              │                ┃ "
" ┃    Test Artist │     folder 7                             │                ┃ "
" ┃                │ Enter save · Esc cancel                  │                ┃ "
" ┃                ╰──────────────────────────────────────────╯                ┃ "
" ┃                                                                            ┃ "
" ┃                                                                            ┃ "
" ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ "
"  Space  Play  Enter  Open  a  Queue  /  Find  ?/Ctrl+K  Help  q  Quit          "
"                                                                                "
